source/stylesheets/product.sass
@import 'variables'


.product-page
  +flexbox
  +align-items(flex-start)
  +justify-content(flex-start)
  padding-bottom: 100px
  position: relative
  
  @media screen and (max-width: $break-medium)
    +flex-direction(column)
    
.slick-slider
  clear: both
  
.product-page-images
  +pie-clearfix
  max-width: 600px
  width: 100%
  
  @media screen and (min-width: 1025px)
    .product-list-image
      margin-bottom: 50px
      
  @media screen and (max-width: $break-large) and (orientation: portrait)
    max-width: 500px
      
  @media screen and (max-width: $break-large) and (orientation: landscape)
    max-width: 400px
  
  @media screen and (max-width: $break-medium)
    max-width: 100%
    
  .image
    display: block
    width: 100%
    
    &:focus
      outline: none
  
  img
    width: 100%

.custom-navigation
  +flexbox
  +align-items(center)
  +flex-direction(row)
  +justify-content(space-around)
  height: 75px
  position: relative
  width: 100%
  
  @media screen and (min-width: 1025px)
    display: none
  
  .flex-control
    +flexbox
    +align-items(center)
    +justify-content(center)
    height: 75px
    width: 75px
  
  .nav-arrow
    fill: $accent-text-color
    height: 30px
    width: 30px
    
    &.left-arrow
      +transform(rotate(90deg))
      
    &.right-arrow
      +transform(rotate(-90deg))
    
  .custom-controls-container
    margin: 0 auto
    max-width: 100px
    width: 100%
    
  .slick-dots
    bottom: auto
    margin: 0
    padding: 0
    position: relative
    text-align: center
    width: auto
    
  .slick-dots li
    border-radius: 50%
    height: 6px
    width: 6px
    
  .slick-dots li button
    border-radius: 50%
    border: 1px solid $accent-text-color
    box-shadow: none
    height: 6px
    padding: 0
    width: 6px
    
  .slick-dots li.slick-active button
    background: $accent-text-color
        
.product-page-accent
  background-color: $accent-background-color
  float: right
  height: 25px
  max-width: calc(100% - 100px)
  position: relative
  text-align: center
  width: 100%
  z-index: 2
  
  &.has-controls
    height: 75px
  
  @media screen and (max-width: $break-extra-small)
    max-width: calc(100% - 50px)

.product-page-details
  margin-left: 100px
  margin-top: 125px
  max-width: 500px
  width: 100%
  
  @media screen and (max-width: $break-large) and (orientation: portrait)
    margin-left: 50px
  
  @media screen and (max-width: $break-medium)
    margin-left: 0
    margin-top: -50px
    max-width: none
  
  @media screen and (max-width: $break-extra-small)
    margin-top: -25px
  
.product-page-info
  background: $background-color
  font-size: 25px
  left: -150px
  letter-spacing: 7px
  line-height: 40px
  margin-bottom: 50px
  max-width: 450px
  padding: 25px
  position: relative
  text-transform: uppercase
  width: 100%
  
  @media screen and (max-width: $break-large) and (orientation: portrait)
    left: -100px
  
  @media screen and (max-width: $break-medium)
    left: auto
    max-width: 80%

.product-form
  +pie-clearfix
  margin-bottom: 100px
  position: relative
  
  @media screen and (max-width: $break-medium)
    margin-bottom: 50px

  .errors
    margin-bottom: 50px
    
  .button
    +flexbox
    +align-items(center)
    +justify-content(center)
    float: left
    max-width: 100px
    position: relative
    width: 100%
    
    @media screen and (max-width: $break-small)
      max-width: 75px
    
    .status-icon
      display: block
      margin: 0
      text-align: center
      width: 100%
    
      svg
        display: block
        fill: $accent-text-color
        height: 25px
        margin: 0 auto
        width: 25px
        
      &.success-icon
        display: none
      
  
.option-navigation
  border-right: 1px solid $background-color
  float: left
  margin-left: 0
  margin-bottom: 0
  max-width: calc(100% - 100px)
  
  @media screen and (max-width: $break-small)
    max-width: calc(100% - 75px)

.single-option
  +flexbox
  +align-items(center)
  +justify-content(flex-start)
  background: $accent-background-color
  color: $accent-text-color
  cursor: pointer
  float: left
  font-family: $primary-font
  font-size: 11px
  height: 75px
  letter-spacing: 2px
  max-width: calc(100% - 100px)
  padding: 0 50px
  position: relative
  width: 100%
  
  @media screen and (max-width: $break-small)
    max-width: calc(100% - 75px)
    padding: 0 25px
  
  &.has-multiple
    line-height: 16px
    
.product-quantity, #option
  display: none

.product-description
  font-size: 15px
  line-height: 30px
  text-transform: none

@keyframes spinner
  to
    transform: rotate(360deg)
 
.spinner:before
  +animation(spinner .6s linear infinite)
  border-radius: 50%
  border: 1px solid $accent-text-color
  border-top: 1px solid $accent-background-color
  content: ''
  height: 20px
  left: 50%
  margin-top: -10px
  margin-left: -10px
  position: absolute
  top: 50%
  width: 20px

